--- a/templates/info.html
+++ b/templates/info.html
@@ -42,7 +42,7 @@
             <table class="table table-striped">
                 <thead>
                   <tr>
-                    <th><font size=3><font face="微軟正黑體">此測試網站架設於Repl.it、Github及Heroku<br>排版不適請見諒<br>提供給DBFZ的玩家不專業的教學<br>若有任何問題<br>可於<a href="https://steamcommunity.com/profiles/76561198214911283/" target="_blank" style="text-decoration:none;color:purple;">Steam</a>上聯繫我</font></th>
+                    <th class="text-center"><font size=3><font face="微軟正黑體">此測試網站架設於repl.it<br>排版不適請見諒<br>提供給DBFZ的玩家不專業的教學<br>若有任何問題<br>可於<a href="https://steamcommunity.com/profiles/76561198214911283/" target="_blank" style="text-decoration:none;color:purple;">Steam</a>上聯繫我</font></th>
                   </tr>
                 </thead>
             </table>
