--- a/templates/tech.html
+++ b/templates/tech.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-education"></span> <font face="微軟正黑體">Dragon Ball FighterZ 教學站</font></a>
+      <a class="navbar-brand"><span class="glyphicon glyphicon-education"></span> <font face="微軟正黑體">Dragon Ball FighterZ 教學站</font></a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="/"><font face="微軟正黑體">首頁 </font><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
