--- a/templates/tech.html
+++ b/templates/tech.html
@@ -61,7 +61,7 @@
                                 <h3 class="modal-title"><font face="微軟正黑體">{{ c[1] }}</h3>
                               </div>
                               <div class="modal-body">
-                                <p style="text-overflow:initial;"><font size=2><font face="微軟正黑體">{{ c[3] }}</p>
+                                <font size=2><font face="微軟正黑體">{{ c[3] }}
                               </div>
                               <div class="modal-footer">
                                 <button type="button" class="btn btn-block"  data-dismiss="modal"><font size=3><font face="微軟正黑體">關閉<span class="glyphicon glyphicon-remove-sign" aria-hidden="true"></span></button>
