--- a/templates/tech.html
+++ b/templates/tech.html
@@ -60,7 +60,7 @@
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 <h3 class="modal-title"><font face="微軟正黑體">{{ c[1] }}</h3>
                               </div>
-                              <div class="modal-body">
+                              <div class="modal-body" style="word-wrap: break-word;">
                                 <font size=2><font face="微軟正黑體">{{ c[3] }}
                               </div>
                               <div class="modal-footer">
