--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
                 {% for c in cat %}
                 <tr>
                   <td class="text-center"><font size="3" face="微軟正黑體">{{ c[0] }}</font></td>
-                  <td class="text-center"><a href="/tech/{{ c[0] }}"><font size="3" face="微軟正黑體">{{ c[1] }} 篇</font></a></td>
+                  <td class="text-center"><a href="/learn/{{ c[0] }}"><font size="3" face="微軟正黑體">{{ c[1] }} 篇</font></a></td>
                 </tr>
                 {% endfor %}
             </tbody>   
